tests/lime/pass/bugs/args/jn_macro.wsa
    push 1
    jn macro hello [push 2] .hello
    hello
.hello:
