tests/lime/fail/tokens/macro_rest/byte_58.wsa
macro m: [push 58] m:
